Added changes to swagger
